Fix runner for newer Javas which require permission to introspect.